--- a/platform/browser/client/app/index.html
+++ b/platform/browser/client/app/index.html
@@ -52,9 +52,7 @@
                             <!--<li><a href="#" id="save-json">Save as JSON</a></li>-->
                         <!--</ul>-->
                     <!--</li>-->
-                    <li>
-                        <a href="#" id="clear-logs">Clear Logs</a>
-                    </li>
+                    <li><a href="#" id="clear-logs">Clear Logs</a></li>
                 </ul>
                 <div class="navbar-form navbar-right">
                     <div class="form-group">
@@ -70,13 +68,33 @@
     <div id="content">
         <!-- Nav tabs -->
         <ul id="tabs-host" class="nav nav-tabs">
-            <li class="active"><a href="#logs" data-toggle="tab">Logs</a></li>
+            <li class="active"><a href="#logs" data-toggle="tab">Logs</b></a></li>
         </ul>
 
         <!-- Tab panes -->
         <div id="tabs-content-host" class="tab-content">
             <div class="tab-pane active" id="logs">
-                <div id="logger"></div>
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="pull-right">
+                            <label class="checkbox-inline">
+                                <input type="checkbox" name="logLevels" id="log-level-info" value="info" checked>Info
+                            </label>
+                            <label class="checkbox-inline">
+                                <input type="checkbox" name="logLevels" id="log-level-debug" value="debug" checked>Debug
+                            </label>
+                            <label class="checkbox-inline">
+                                <input type="checkbox" name="logLevels" id="log-level-warning" value="warning" checked>Warning
+                            </label>
+                            <label class="checkbox-inline">
+                                <input type="checkbox" name="logLevels" id="log-level-error" value="error" checked>Error
+                            </label>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div id="logger"></div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
