--- a/platform/nw/app/index.html
+++ b/platform/nw/app/index.html
@@ -39,27 +39,14 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <!--<li class="dropdown">-->
-                    <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown">File <b class="caret"></b></a>-->
-                    <!--<ul class="dropdown-menu">-->
-                    <!--<li class="dropdown-header">Load actions</li>-->
-                    <!--<li><a href="#" id="load">Load</a></li>-->
-                    <!--<li><a href="#" id="merge">Merge</a></li>-->
-                    <!--<li><a href="#" id="open-from-node">Open from node</a></li>-->
-                    <!--<li><a href="#" id="merge-from-node">Merge from node</a></li>-->
-                    <!--<li class="divider"></li>-->
-                    <!--<li class="dropdown-header">Save actions</li>-->
-                    <!--<li><a href="#" id="save-json">Save as JSON</a></li>-->
-                    <!--</ul>-->
-                    <!--</li>-->
                     <li><a href="#" id="clear-logs">Clear Logs</a></li>
                 </ul>
                 <div class="navbar-form navbar-right">
-                    <div class="form-group">
-                        <input id="platform-node-name" type="text" placeholder="Node name" class="form-control">
+                    <div class="form-group btn-group-sm">
+                        <input id="platform-node-name" type="text" placeholder="Node name" class="form-control input-sm">
                     </div>
-                    <button id="start-runtime" type="button" class="btn btn-success">Start</button>
-                    <button id="stop-runtime" type="button" class="btn btn-warning" disabled>Stop</button>
+                    <button id="start-runtime" type="button" class="btn btn-sm btn-success">Start</button>
+                    <button id="stop-runtime" type="button" class="btn btn-sm btn-warning" disabled>Stop</button>
                 </div>
             </div><!--/.navbar-collapse -->
         </div>
