--- a/platform/nw/app/index.html
+++ b/platform/nw/app/index.html
@@ -41,13 +41,23 @@
                 <ul class="nav navbar-nav">
                     <li><a href="#" id="clear-logs">Clear Logs</a></li>
                 </ul>
-                <div class="navbar-form navbar-right">
-                    <div class="form-group btn-group-sm">
-                        <input id="platform-node-name" type="text" placeholder="Node name" class="form-control input-sm">
-                    </div>
-                    <button id="start-runtime" type="button" class="btn btn-sm btn-success">Start</button>
-                    <button id="stop-runtime" type="button" class="btn btn-sm btn-warning" disabled>Stop</button>
-                </div>
+                <!--<div class="navbar-form navbar-right">-->
+                    <!--<div id="start-panel">-->
+                        <!--<button id="start-from-model" type="button" class="btn btn-sm btn-default">Start from model <span class="glyphicon glyphicon-log-in"></span></button>-->
+                        <!--<span style="color: white">or</span>-->
+                        <!--<button id="start-custom" type="button" class="btn btn-sm btn-default">Custom start <span class="glyphicon glyphicon-log-in"></span></button>-->
+                    <!--</div>-->
+                    <!--<div id="start-custom-panel" class="hide">-->
+                        <!--<div class="form-group btn-group-sm">-->
+                            <!--<input id="platform-node-name" type="text" placeholder="Node name" class="form-control input-sm">-->
+                            <!--<input id="platform-group-name" type="text" placeholder="Group name" value="sync" class="form-control input-sm">-->
+                            <!--<input id="platform-group-port" type="number" placeholder="Group port" value="9000" class="form-control input-sm">-->
+                        <!--</div>-->
+                        <!--<button id="start-runtime" type="button" class="btn btn-sm btn-success">Start</button>-->
+                        <!--<button id="stop-runtime" type="button" class="btn btn-sm btn-warning" disabled>Stop</button>-->
+                        <!--<button id="back" type="button" class="btn btn-sm btn-default"><span class="glyphicon glyphicon-log-out"></span></button>-->
+                    <!--</div>-->
+                <!--</div>-->
             </div><!--/.navbar-collapse -->
         </div>
     </div>
@@ -85,6 +95,10 @@
             </div>
         </div>
     </div>
+
+    <div id="modal" class="modal fade" data-backdrop="static"></div>
+
+    <input id="model-input" type="file" class="hide">
 
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
