--- a/platform/browser/client/app/index.html
+++ b/platform/browser/client/app/index.html
@@ -39,19 +39,6 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <!--<li class="dropdown">-->
-                        <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown">File <b class="caret"></b></a>-->
-                        <!--<ul class="dropdown-menu">-->
-                            <!--<li class="dropdown-header">Load actions</li>-->
-                            <!--<li><a href="#" id="load">Load</a></li>-->
-                            <!--<li><a href="#" id="merge">Merge</a></li>-->
-                            <!--<li><a href="#" id="open-from-node">Open from node</a></li>-->
-                            <!--<li><a href="#" id="merge-from-node">Merge from node</a></li>-->
-                            <!--<li class="divider"></li>-->
-                            <!--<li class="dropdown-header">Save actions</li>-->
-                            <!--<li><a href="#" id="save-json">Save as JSON</a></li>-->
-                        <!--</ul>-->
-                    <!--</li>-->
                     <li><a href="#" id="clear-logs">Clear Logs</a></li>
                 </ul>
                 <div class="navbar-form navbar-right">
@@ -68,7 +55,7 @@
     <div id="content">
         <!-- Nav tabs -->
         <ul id="tabs-host" class="nav nav-tabs">
-            <li class="active"><a href="#logs" data-toggle="tab">Logs</b></a></li>
+            <li class="active"><a href="#logs" data-toggle="tab">Logs</a></li>
         </ul>
 
         <!-- Tab panes -->
@@ -77,18 +64,7 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="pull-right">
-                            <label class="checkbox-inline">
-                                <input type="checkbox" name="logLevels" id="log-level-info" value="info" checked>Info
-                            </label>
-                            <label class="checkbox-inline">
-                                <input type="checkbox" name="logLevels" id="log-level-debug" value="debug" checked>Debug
-                            </label>
-                            <label class="checkbox-inline">
-                                <input type="checkbox" name="logLevels" id="log-level-warning" value="warning" checked>Warning
-                            </label>
-                            <label class="checkbox-inline">
-                                <input type="checkbox" name="logLevels" id="log-level-error" value="error" checked>Error
-                            </label>
+                            <div><span id="ws-status-text">Disconnected</span>&nbsp;<span id="ws-status-icon" class="glyphicon glyphicon-exclamation-sign"></span></div>
                         </div>
                     </div>
                     <div class="row">
