--- a/libs/comps/consoleprinter/index.html
+++ b/libs/comps/consoleprinter/index.html
@@ -2,8 +2,8 @@
   <head>
     <title>ConsolePrinter test page</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/systemjs/0.19.25/system-polyfills.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/systemjs/0.19.25/system.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.0.1/react.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.0.1/react-dom.js"></script>
   </head>
   <body>
     <div id="container"></div>
