--- a/runtimes/browser/index.html
+++ b/runtimes/browser/index.html
@@ -2,14 +2,12 @@
 <html>
 <head>
   <meta charset=utf-8/>
+  <meta name="viewport" content="width=device-width, user-scalable=no">
   <title>Kevoree Browser Runtime</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css" />
-  <link rel="stylesheet" href="/node_modules/react-grid-layout/css/styles.css" />
-  <link rel="stylesheet" href="/node_modules/react-resizable/css/styles.css" />
-  <link rel="stylesheet" href="/styles/main.css" />
+  <link rel="stylesheet" href="/main.css" />
 </head>
 <body>
-  <div id="app" class="row"></div>
+  <div id="app"></div>
   <script src="/bundle.js"></script>
 </body>
 </html>
