--- a/libs/comps/ticker/index.html
+++ b/libs/comps/ticker/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <div id="container"></div>
-    <script src="built/browser/test-bundle.js"></script>
+    <script src="test-bundle.js"></script>
   </body>
 </html>
