output js + css for cm-mode-kevscript

--- a/tools/cm-kevscript/test/index.html
+++ b/tools/cm-kevscript/test/index.html
@@ -52,7 +52,7 @@
   </style>
 </head>
 
-<body>
+<body onload="bootstrap()">
   <h2>CodeMirror KevScript Test</h2>
   <div id="editor-container">
     <textarea id="editor"></textarea>
@@ -61,7 +61,8 @@
     <h3>Logger</h3>
     <div id="logger"></div>
   </div>
-  <script src="main.js"></script>
+
+  <script src="test.js"></script>
 </body>
 
 </html>
