--- a/tools/browser-runtime/public/index.html
+++ b/tools/browser-runtime/public/index.html
@@ -11,7 +11,8 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css"></link>
-    <script type="application/javascript" src="https://unpkg.com/kevoree-library@5.0.13/browser/kevoree-library.js"></script>
+    <script src="https://unpkg.com/tiny-conf@1.1.0/dist/tiny-conf.js"></script>
+    <script src="https://unpkg.com/kevoree-library@5.0.13/browser/kevoree-library.js"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -21,13 +22,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Kevoree Browser Runtime</title>
   </head>
   <body>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
-    <div id="root"></div>
+    <div id="root">Loading...</div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
